# btc-mpc

./: Cargo.toml  README.md
.cargo/: config
contracts/dkg_coordinator/: Cargo.toml
contracts/dkg_coordinator/src/: bls.rs  execute.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/primitives/: Cargo.toml
contracts/primitives/src/: bls.rs  dkg.rs  lib.rs  utils.rs
contracts/sig_coordinator/: Cargo.toml
contracts/sig_coordinator/src/: bls.rs  execute.rs  lib.rs  msg.rs  state.rs
dkg/: Cargo.toml
dkg/config/: osmosis_testnet.yaml
dkg/src/: bulletin_board.rs  dkg_coordinator.rs  dkg_peer.rs  endpoints.rs  error.rs  lib.rs  node.rs  peer.rs  signing_coordinator.rs  signing_peer.rs
dkg/testdata/: confirmation.json  message.json  nodes.json
dkg/testdata/dkg_output/group_1/: peer_1.json  peer_2.json  peer_3.json
dkg/testdata/dkg_output/group_2/: peer_4.json  peer_5.json  peer_6.json
dkg/testdata/peer_secp256k1_sk/: peer_1.json  peer_2.json  peer_3.json  peer_4.json  peer_5.json  peer_6.json
