[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto/", subdirectory = "fastcrypto-tbls", rev = "2c593b9" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto/", subdirectory = "fastcrypto", rev = "2c593b9" }
rand = "0.8.5"
serde_json = "1.0.120"
thiserror = "1"
cosm-orc = "4.0.1"
serde = "1.0.207"
