[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosm-tome = { git = "https://github.com/commonprefix/cosm-tome", rev = "a25c4d0e87419a012161c807fc67850346787bb1" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto/", subdirectory = "fastcrypto-tbls", rev = "2c593b9" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto/", subdirectory = "fastcrypto", rev = "2c593b9" }
rand = "0.8.5"
serde_json = "1.0.120"
thiserror = "1"
serde = "1.0.207"
serde_yaml = "0.9.34"
tokio = "1.39.3"

[dev-dependencies]
serial_test = "3.1.1"
