[package]
authors = [
    "Apostolos Tzinas <tzinas@commonprefix.com>",
    "Themis Papameletiou <themis@commonprefix.com>",
]
edition = "2021"
name = "dkg_coordinator"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
blst = "0.3.13"
cosmwasm-std = "2.1.1"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
eyre = "0.6.12"
serde = "1.0.204"
serde_json = "1.0.122"

[dev-dependencies]
serde_json = "1.0.122"
